--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.8.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
+    "randomstring": "^1.2.3"
   }
 }
